--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </section> -->
 
     <footer class="footer">
-        <div class="contact-info" style="grid-area: c-info-area-1">
+        <div class="contact-info">
             <h2>Contact Us</h2>
             <h1>Rahman Dental Care</h1>
             <p>
@@ -277,7 +277,7 @@
             </p>
         </div>
 
-        <div class="devinfo" style="grid-area: c-info-area-2">
+        <div class="devinfo">
             <a href=""><p>Developed by <br>
                 Sajid Ahmed Rahi <br>
                 Department of Internet of Things and Robotics Engineering <br>
@@ -285,7 +285,7 @@
             </p></a>
         </div>
 
-        <div class="care-info" style="grid-area: c-info-area-3;">
+        <div class="care-info">
             <img src="assets/logo.jpeg" alt="">
             <h1>Rahman Dental Care</h1>
             <div class="social">
