pages and css for individual pages added

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </div>
 
             <div class="nav-right">
-                <a href="index.html#home">Home</a>
-                <a href="">Doctor</a>
-                <a href="">News</a>
-                <a href="">Services</a>
-                <a href="">Gallery</a>
-                <a href="">Payment</a>
-                <a href="">Contact</a>
+                <a href="index.html#home" class="active-page">Home</a>
+                <a href="pages/doctor.html">Doctor</a>
+                <a href="pages/news.html">News</a>
+                <a href="pages/services.html">Services</a>
+                <a href="pages/gallery.html">Gallery</a>
+                <a href="pages/payment.html">Payment</a>
+                <a href="pages/contact.html">Contact</a>
 
                 <!-- <label for="sidebar-active"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></label> -->
             </div>
@@ -162,7 +162,7 @@
 
     <section class="doctor">
         <div class="doctor-left">
-            <a href=""><img src="assets/arafat.jpeg" alt=""></a>
+            <a href="/pages/doctor.html"><img src="assets/arafat.jpeg" alt=""></a>
         </div>
         <div class="doctor-right">
             <h1>Dr. Arafat Rahman Bappi</h1>
