doctor.html interactive

--- a/pages/doctor.html
+++ b/pages/doctor.html
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    <section>
+    <section class="body-holder">
         <div class="doctor">
             <div class="bar"><h1>Doctor</h1></div>
             <img src="../assets/arafat.jpeg" alt="">
@@ -109,5 +109,7 @@
 
         <a href="../index.html#home"><button class="scroll-btn-to-up" style="grid-area: c-info-area-4;">&#8686</button></a>
     </footer>
+
+    <script src="../script.js"></script>
 </body>
 </html>
