--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="script.js"></script>
-    <script src="Backend/Email.js"></script>
-
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
@@ -78,9 +75,9 @@
 
         <div class="image-container">
             <div class="image-card">
+                <img src="assets/images/one.jpg" alt="image">
                 <img src="assets/images/two.jpg" alt="image">
                 <img src="assets/images/three.jpg" alt="image">
-                <img src="assets/images/one.jpg" alt="image">
             </div>
 
             <div class="info-card">
@@ -313,6 +310,9 @@
 
         <a href="index.html#home"><button class="scroll-btn-to-up" style="grid-area: c-info-area-4;">&#8686</button></a>
     </footer>
+
+    <script src="script.js"></script>
+    <!-- <script src="Backend/Email.js"></script> -->
 
 </body>
 </html>
