--- a/pages/doctor.html
+++ b/pages/doctor.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../assets/logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="../css/UniversalStyle.css">
     <link rel="stylesheet" href="../css/doctor.css">
+    <link rel="stylesheet" href="../css/elements.css">
 </head>
 <body>
     <header class="home" id="home">
@@ -107,7 +108,7 @@
             </div>
         </div>
 
-        <a href="../index.html#home"><button class="scroll-btn-to-up" style="grid-area: c-info-area-4;">&#8686</button></a>
+        <a href="#home"><button class="scroll-btn-to-up" style="grid-area: c-info-area-4;">&#8686</button></a>
     </footer>
 
     <script src="../script.js"></script>
