--- a/pages/news.html
+++ b/pages/news.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../assets/logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="../css/UniversalStyle.css">
     <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/elements.css">
 </head>
 <body>
     <header class="home" id="home">
@@ -52,6 +53,43 @@
         </div>
     </header>
 
+    <div class="news-body-container">
+        <div class="news-container">
+            <div class="news-bar"></div>
+
+            <div class="news">
+                <div class="news-left">
+                    <img src="../assets/images/news/news-1.png" alt="">
+                </div>
+
+                <div class="news-right">
+                    <a href=""><h1>Title</h1></a>
+                    <h3>lorem</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus recusandae porro deleniti corporis fuga?</p>
+                    <h3>lorem | lorem</h3>
+                </div>
+            </div>
+            <hr>
+
+            <div class="news">
+                <div class="news-left">
+                    <img src="../assets/images/news/news-1.png" alt="">
+                </div>
+
+                <div class="news-right">
+                    <a href=""><h1>Title</h1></a>
+                    <h3>lorem</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus recusandae porro deleniti corporis fuga?</p>
+                    <h3>lorem | lorem</h3>
+                </div>
+            </div>
+            <hr>
+
+        </div>
+
+        <button>&#10094 Older Post</button>
+    </div>
+
     <footer class="footer">
         <div class="contact-info">
             <h2>Contact Us</h2>
@@ -86,7 +124,9 @@
             </div>
         </div>
 
-        <a href="../index.html#home"><button class="scroll-btn-to-up" style="grid-area: c-info-area-4;">&#8686</button></a>
+        <a href="#home"><button class="scroll-btn-to-up" style="grid-area: c-info-area-4;">&#8686</button></a>
     </footer>
+
+    <script src="../script.js"></script>
 </body>
 </html>
